--- a/BullsEye/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/BullsEye/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_0" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,27 +15,111 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VjY-bG-ZuJ">
-                                <rect key="frame" x="135" y="269" width="50" height="30"/>
+                                <rect key="frame" x="259" y="195" width="50" height="30"/>
                                 <state key="normal" title="Hit Me!"/>
                                 <connections>
                                     <action selector="showAlert" destination="BYZ-38-t0r" eventType="touchUpInside" id="I24-i7-aKP"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Put the Bull's Eye as close as you can to: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ist-jT-ILo">
+                                <rect key="frame" x="127" y="20" width="314" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbg-qw-SHR">
+                                <rect key="frame" x="441" y="20" width="28.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="duf-dl-naH">
+                                <rect key="frame" x="48" y="145" width="472" height="31"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nE1-IT-qtI">
+                                <rect key="frame" x="20" y="149.5" width="8" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pqA-Qp-wU5">
+                                <rect key="frame" x="519" y="149.5" width="29" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1YQ-Ku-NQ4">
+                                <rect key="frame" x="20" y="270" width="71" height="30"/>
+                                <state key="normal" title="Start Over"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdJ-Ty-uDi">
+                                <rect key="frame" x="131" y="276" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msC-zc-gcu">
+                                <rect key="frame" x="186" y="276" width="74" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Round:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jlR-YZ-zLG">
+                                <rect key="frame" x="350" y="276" width="54" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1h-0q-UNM">
+                                <rect key="frame" x="409" y="276" width="32" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V9n-ov-Abm">
+                                <rect key="frame" x="526" y="278" width="22" height="22"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="VjY-bG-ZuJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="P8U-Cn-4qh"/>
-                            <constraint firstItem="VjY-bG-ZuJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cOb-Lm-gGo"/>
+                            <constraint firstItem="ist-jT-ILo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0ro-4T-U9G"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jlR-YZ-zLG" secondAttribute="bottom" constant="23" id="1QS-CP-Z9Z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="1YQ-Ku-NQ4" secondAttribute="bottom" constant="20" id="1ij-nB-gT1"/>
+                            <constraint firstItem="duf-dl-naH" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3Pg-Zn-5lY"/>
+                            <constraint firstItem="jlR-YZ-zLG" firstAttribute="leading" secondItem="msC-zc-gcu" secondAttribute="trailing" constant="90" id="4o5-RK-epC"/>
+                            <constraint firstItem="msC-zc-gcu" firstAttribute="leading" secondItem="bdJ-Ty-uDi" secondAttribute="trailing" constant="5" id="5EF-uR-5js"/>
+                            <constraint firstItem="ist-jT-ILo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="AZd-ah-QaL"/>
+                            <constraint firstItem="bdJ-Ty-uDi" firstAttribute="leading" secondItem="1YQ-Ku-NQ4" secondAttribute="trailing" constant="40" id="B93-At-z1B"/>
+                            <constraint firstItem="nE1-IT-qtI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="D9D-Cs-sb3"/>
+                            <constraint firstItem="nE1-IT-qtI" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="DfA-X6-P0R"/>
+                            <constraint firstItem="wbg-qw-SHR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Fe1-9O-AIU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="V9n-ov-Abm" secondAttribute="bottom" constant="20" id="Ket-6d-2a2"/>
+                            <constraint firstItem="VjY-bG-ZuJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="U9M-fj-EBm"/>
+                            <constraint firstItem="1YQ-Ku-NQ4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ujc-0f-MVQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pqA-Qp-wU5" secondAttribute="trailing" constant="20" id="XLw-PZ-Xy3"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="P1h-0q-UNM" secondAttribute="bottom" constant="23" id="Xrv-23-z8G"/>
+                            <constraint firstItem="wbg-qw-SHR" firstAttribute="leading" secondItem="ist-jT-ILo" secondAttribute="trailing" id="aN3-ho-DEP"/>
+                            <constraint firstItem="duf-dl-naH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cKS-It-Bon"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="V9n-ov-Abm" secondAttribute="trailing" constant="20" id="duR-8F-P88"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="msC-zc-gcu" secondAttribute="bottom" constant="23" id="hSG-1z-O3v"/>
+                            <constraint firstItem="VjY-bG-ZuJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="j3e-Po-9wt"/>
+                            <constraint firstItem="duf-dl-naH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="jwd-IW-ieR"/>
+                            <constraint firstItem="VjY-bG-ZuJ" firstAttribute="top" secondItem="duf-dl-naH" secondAttribute="bottom" constant="20" id="n8s-d0-c5Q"/>
+                            <constraint firstItem="pqA-Qp-wU5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="nyu-mB-uQe"/>
+                            <constraint firstItem="P1h-0q-UNM" firstAttribute="leading" secondItem="jlR-YZ-zLG" secondAttribute="trailing" constant="5" id="tyg-xO-VVi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="duf-dl-naH" secondAttribute="trailing" constant="50" id="wxt-ON-RXD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bdJ-Ty-uDi" secondAttribute="bottom" constant="23" id="zCc-Pc-xon"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="138.38028169014083" y="112.5"/>
         </scene>
     </scenes>
 </document>
